crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__integer_u8_safe_pass.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PROVE-001] Error: prove obligation verification failed: integer safety verification failed (SAT counterexamples found):
main#main#u8#.oac_integer_site_u8__add__stmt_2_assign_value (root=main, caller=main, op=add, semantic_type=U8, qbe_artifact=site_main_main_u8__oac_integer_site_u8__add__stmt_2_assign_value.qbe, smt_artifact=site_main_main_u8__oac_integer_site_u8__add__stmt_2_assign_value.smt2)
main#main#u8#.oac_integer_site_u8__mul__stmt_3_assign_value (root=main, caller=main, op=mul, semantic_type=U8, qbe_artifact=site_main_main_u8__oac_integer_site_u8__mul__stmt_3_assign_value.qbe, smt_artifact=site_main_main_u8__oac_integer_site_u8__mul__stmt_3_assign_value.smt2)
