crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__json_document.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: output
snapshot_kind: text
---
1
1
1
12
11
11
1
11
10
1
