crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__json_parser.oa.snap
---
source: crates/oac/src/qbe_backend.rs
assertion_line: 2804
expression: snapshot_content
snapshot_kind: text
---
1
1
3
4
5
6
6
7
0
