crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__json_scan_utils.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PROVE-001] Error: prove obligation verification failed: missing signature for function __string_data_len while building argument-invariant assumptions
