crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__json_value_parser.oa.snap
---
source: crates/oac/src/qbe_backend.rs
assertion_line: 2804
expression: snapshot_content
snapshot_kind: text
---
10
1
1
1
4
12
1
7
4
1
6
1
1
1
5
3
1
1
1
1
1
3
0
1
4
1
7
1
1
1
6
1
1
0
1
1
11
