crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__match_expr_nested.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PROVE-001] Error: prove obligation verification failed: integer safety verification failed (SAT counterexamples found):
main#score#i32#.oac_integer_site_i32__add__stmt_0_return_expr_match_arm_0 (root=main, caller=score, op=add, semantic_type=I32, qbe_artifact=site_main_score_i32__oac_integer_site_i32__add__stmt_0_return_expr_match_arm_0.qbe, smt_artifact=site_main_score_i32__oac_integer_site_i32__add__stmt_0_return_expr_match_arm_0.smt2)
