crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__match_expr_non_exhaustive.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

[OAC-RESOLVE-001] Error: failed to resolve/type-check program: non-exhaustive match on Color: missing variants ["Green"]
