crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__match_expr_type_mismatch.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

[OAC-RESOLVE-001] Error: failed to resolve/type-check program: match expression arm type mismatch: expected "I32", got "Bool"
