crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__method_call_sugar.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
8
15
23
