crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__model_invariant_arithmetic_overflow_fail.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PROVE-001] Error: prove obligation verification failed: integer safety verification failed (SAT counterexamples found):
__model__invariant__anon_0#__model__invariant__anon_0#i32#.oac_integer_site_i32__add__stmt_0_assign_value (root=__model__invariant__anon_0, caller=__model__invariant__anon_0, op=add, semantic_type=I32, qbe_artifact=site___model__invariant__anon_0___model__invariant__anon_0_i32__oac_integer_site_i32__add__stmt_0_assign_value.qbe, smt_artifact=site___model__invariant__anon_0___model__invariant__anon_0_i32__oac_integer_site_i32__add__stmt_0_assign_value.smt2)
