crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__model_invariant_impure_print.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-RESOLVE-001] Error: failed to resolve/type-check program: model invariant "pair equality with side effect" must be pure: function __model__invariant__anon_0 calls side-effect builtin print
